Revert "migration to Xtext 2.8"
This reverts commit 34e2b686cf957df1efc81a462f9319e0ff494cf8.