@@ -13,63 +13,44 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<spray-ci-targetrepository>https://spray.ci.cloudbees.com/job/spray-ci-targetplatform-luna/lastSuccessfulBuild/artifact/releng/org.eclipselabs.spray.repository/target/repository/</spray-ci-targetrepository>
+		<spray-ci-targetrepository>https://spray.ci.cloudbees.com/job/spray-ci-targetplatform/lastSuccessfulBuild/artifact/releng/org.eclipselabs.spray.repository/target/repository/</spray-ci-targetrepository>
 		<spray-local-targetrepository>file:../../releng/org.eclipselabs.spray.repository/target/repository</spray-local-targetrepository>
 		<project.encoding>UTF-8</project.encoding>
 		<file.encoding>${project.encoding}</file.encoding>
 		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
-		<tycho-version>0.22.0</tycho-version>
+		<tycho-version>0.19.0</tycho-version>
 		<maven-resources-plugin.version>2.6</maven-resources-plugin.version>
 		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
 		<ant-contrib.version>1.0b3</ant-contrib.version>
 		<ant-nodeps.version>1.8.1</ant-nodeps.version>
 		<maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
 		<maven-install-plugin.version>2.5.1</maven-install-plugin.version>
-		<maven-site-plugin.version>3.4</maven-site-plugin.version>
-		<maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
+		<maven-site-plugin.version>3.3</maven-site-plugin.version>
+		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
 		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
 		<maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
 		<maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
-		<maven-scm-plugin.version>1.9.1</maven-scm-plugin.version>
-		<maven-assembly-plugin.version>2.4.1</maven-assembly-plugin.version>
-		<maven-release-plugin.version>2.5</maven-release-plugin.version>
-		<maven-checkstyle-plugin.version>2.12.1</maven-checkstyle-plugin.version>
-		<findbugs-maven-plugin.version>2.5.5</findbugs-maven-plugin.version>
-		<maven-pmd-plugin.version>3.2</maven-pmd-plugin.version>
-		<maven-jxr-plugin.version>2.4</maven-jxr-plugin.version>
-		<build-helper-maven-plugin.version>1.9</build-helper-maven-plugin.version>
+		<maven-scm-plugin.version>1.8.1</maven-scm-plugin.version>
+		<maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
+		<maven-release-plugin.version>2.4.2</maven-release-plugin.version>
+		<maven-checkstyle-plugin.version>2.10</maven-checkstyle-plugin.version>
+		<findbugs-maven-plugin.version>2.5.2</findbugs-maven-plugin.version>
+		<maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
+		<maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
+		<build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
 		<eclipse-signing-maven-plugin.version>1.0.5</eclipse-signing-maven-plugin.version>
-		<exec-maven-plugin-version>1.3.2</exec-maven-plugin-version>
-		<xtend-maven-plugin-version>2.8.0-SNAPSHOT</xtend-maven-plugin-version>
-		<xtend-library-version>2.8.0-SNAPSHOT</xtend-library-version>
-		<xtext-version>2.8.0-SNAPSHOT</xtext-version>
-		<!--  xtend runtime dependencies start -->
-		<org.eclipse.xtext.builder.standalone-version>[${xtext-version}]</org.eclipse.xtext.builder.standalone-version>
-		<org.eclipse.xtext.common.types-version>[${xtext-version}]</org.eclipse.xtext.common.types-version>
-		<org.eclipse.xtext.xtext-version>[${xtext-version}]</org.eclipse.xtext.xtext-version>
-		<org.eclipse.xtext.xbase-version>[${xtext-version}]</org.eclipse.xtext.xbase-version>
-		<org.osgi.core-version>4.3.1</org.osgi.core-version>
-        <equinox-common-version>3.6.200-v20130402-1505</equinox-common-version>
-		<org.eclipse.core.resources-version>3.7.100</org.eclipse.core.resources-version>
-		<org.eclipse.text-version>3.5.101</org.eclipse.text-version>
-		<org.eclipse.emf.codegen.ecore-version>[2.10,)</org.eclipse.emf.codegen.ecore-version>
-		<org.eclipse.emf.codegen.ecore.xtext-version>[1.1.9,)</org.eclipse.emf.codegen.ecore.xtext-version>
-		<org.eclipse.emf.common-version>[2.9.0,)</org.eclipse.emf.common-version>
-		<org.eclipse.emf.ecore-version>[2.9.0,)</org.eclipse.emf.ecore-version>
-		<org.eclipse.emf.ecore.xcore-version>[1.2.9,)</org.eclipse.emf.ecore.xcore-version>
-		<org.eclipse.emf.ecore.xcore.lib-version>[1.0.9,)</org.eclipse.emf.ecore.xcore.lib-version>
-		<org.eclipse.emf.ecore.xcore-version>[1.2.9,)</org.eclipse.emf.ecore.xcore-version>
-		<org.eclipse.emf.ecore.xcore.lib-version>[1.0.9,)</org.eclipse.emf.ecore.xcore.lib-version>
-		<!--  xtend runtime dependencies end -->
-		<jacoco-maven-plugin.version>0.7.2.201409121644</jacoco-maven-plugin.version>
+		<fornax-oaw-m2-plugin.version>3.5.1</fornax-oaw-m2-plugin.version>
+		<xtend-maven-plugin.version>2.4.3</xtend-maven-plugin.version>
+		<xtend-library.version>2.4.3</xtend-library.version>
+		<jacoco-maven-plugin.version>0.6.3.201306030806</jacoco-maven-plugin.version>
 		<junit-version>4.11</junit-version>
-		<local-build-platform.version>[3.9,4.6)</local-build-platform.version>
+		<local-build-platform.version>[3.9,4.4)</local-build-platform.version>
 		<skip.mwe2>true</skip.mwe2>
 		<memoryArgs>-Xms256M -Xmx1024M -XX:PermSize=256M -XX:MaxPermSize=256M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
 		<encodingArgs>-Dfile.encoding=${file.encoding}</encodingArgs>
 		<loggingArgs>-Dlog4j.configuration=file:${basedir}/../../releng/org.eclipselabs.spray.parent/log4j.xml</loggingArgs>
-		<java-compile-version>1.8</java-compile-version>
+		<java-compile-version>6.0</java-compile-version>
 		<ui.test.vmargs></ui.test.vmargs>
 		<coverageAgent></coverageAgent>
 		<it.coverage.argLine></it.coverage.argLine>
@@ -77,6 +58,11 @@
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>${project.build.directory}/xtext</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -91,7 +77,7 @@
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<version>[1.6,1.9)</version>
+									<version>[1.6,1.8)</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
@@ -131,6 +117,13 @@
 						</fileset>
 					</filesets>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.plexus</groupId>
+						<artifactId>plexus-utils</artifactId>
+						<version>3.0.17</version>
+					</dependency>					
+				</dependencies>	
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -140,7 +133,7 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>${maven-antrun-plugin.version}</version>
@@ -186,7 +179,7 @@
 						<version>${ant-nodeps.version}</version>                                   
 					</dependency>
 				</dependencies>
-			</plugin>			
+			</plugin-->			
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
@@ -255,23 +248,14 @@
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-compiler-plugin</artifactId>
 					<version>${tycho-version}</version>
-					<!--configuration>
+					<configuration>
 						<encoding>${project.build.sourceEncoding}</encoding>
 						<meminitial>128m</meminitial>
 						<maxmem>1024m</maxmem>
 						<source>${java-compile-version}</source>
 						<target>${java-compile-version}</target>
 						<verbose>true</verbose>
-					</configuration-->
-					<!--
-					<dependencies>
-						<dependency>
-							<groupId>org.eclipse.jdt</groupId>
-							<artifactId>org.eclipse.jdt.core</artifactId>
-							<version>${cbi-jdt-version}</version>
-						</dependency>
-					</dependencies>
-					-->
+					</configuration>
 				</plugin>
 				<!-- enable source bundle generation -->
 				<plugin>
@@ -283,7 +267,7 @@
 					</configuration>
 					<executions>
 						<execution>
-							<id>default-test</id><!-- can be seen in log: tycho-surefire-plugin:0.20.0:test (default-test) -->
+							<id>default-test</id><!-- can be seen in log: tycho-surefire-plugin:0.19.0:test (default-test) -->
 							<phase>none</phase>
 							<goals>
 								<goal>test</goal>
@@ -291,7 +275,7 @@
 						</execution>
 						<execution>
 							<id>TychoSurefirePluginTest</id>
-							<phase>integration-test</phase>
+							<phase>test</phase>
 							<configuration>
 								<argLine>${encodingArgs} ${memoryArgs} ${ui.test.vmargs} ${coverageAgent} ${loggingArgs}</argLine><!-- different for mac/not mac -->
 								<skip>${tycho.surefire.skipPluginTest}</skip>
@@ -307,7 +291,7 @@
 						</execution>
 						<execution>
 							<id>TychoSurefirePluginUITest</id>
-							<phase>integration-test</phase>
+							<phase>test</phase>
 							<configuration>
 								<skip>${tycho.surefire.skipPluginUITest}</skip>
 								<failIfNoTests>false</failIfNoTests>
@@ -324,12 +308,12 @@
 									<dependency>
 										<type>p2-installable-unit</type>
 										<artifactId>org.eclipse.sdk</artifactId>
-										<version>[4.4.0,4.5.0)</version>
+										<version>[4.3.0,4.4.0)</version>
 									</dependency>
 									<dependency>
 										<type>p2-installable-unit</type>
 										<artifactId>org.eclipse.graphiti.sdk.feature.feature.group</artifactId>
-										<version>[0.11.0,0.12.0)</version>
+										<version>[0.10.0,0.11.0)</version>
 									</dependency>
 								</dependencies>
 								<includes>
@@ -365,6 +349,27 @@
 					<configuration>
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
+					<executions>
+						<execution>
+							<id>copy-resources</id>
+							<phase>initialize</phase>
+							<goals>
+								<goal>copy-resources</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>${project.build.directory}/xtext</outputDirectory>
+								<resources>
+									<resource>
+										<directory>src</directory>
+										<includes>
+											<include>**/*.xtext</include>
+											<include>**/*.mwe2</include>
+										</includes>
+									</resource>
+								</resources>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -505,67 +510,56 @@
 					<version>${eclipse-signing-maven-plugin.version}</version>
 				</plugin>
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>exec-maven-plugin</artifactId>
-					<version>${exec-maven-plugin-version}</version>
+					<groupId>org.fornax.toolsupport</groupId>
+					<artifactId>fornax-oaw-m2-plugin</artifactId>
+					<version>${fornax-oaw-m2-plugin.version}</version>
 					<executions>
 						<execution>
+							<id>xtext</id>
 							<phase>generate-sources</phase>
 							<goals>
-								<goal>java</goal>
+								<goal>run-workflow</goal>
 							</goals>
+							<configuration>
+								<skip>${skip.mwe2}</skip>
+								<workflowEngine>mwe2</workflowEngine>
+								<workflowDescriptor>${mwe2descriptor}</workflowDescriptor>
+								<timestampFileName>xtext-generator.timestamp</timestampFileName>
+								<jvmSettings>
+									<fork>true</fork>
+									<jvmArgs>
+										<jvmArg>${encodingArgs}</jvmArg>
+										<jvmArg>-Xms100m</jvmArg>
+										<jvmArg>-Xmx700m</jvmArg>
+										<jvmArg>-XX:MaxPermSize=128m</jvmArg>
+										<jvmArg>${loggingArgs}</jvmArg>
+									</jvmArgs>
+								</jvmSettings>
+							</configuration>
 						</execution>
 					</executions>
-					<configuration>
-						<skip>${skip.mwe2}</skip>
-						<includeProjectDependencies>false</includeProjectDependencies>
-						<includePluginDependencies>true</includePluginDependencies>
-						<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
-						<arguments>
-							<argument>file://${project.basedir}/${mwe2.relative.path}</argument>
-						</arguments>
-					</configuration>
-					<dependencies>
-						<dependency>
-							<groupId>org.eclipse.xtext</groupId>
-							<artifactId>org.eclipse.xtext.xtext</artifactId>
-							<version>${org.eclipse.xtext.xtext-version}</version>
-						</dependency>
-						<dependency>
-							<groupId>org.eclipse.xtext</groupId>
-							<artifactId>org.eclipse.xtext.xbase</artifactId>
-							<version>${org.eclipse.xtext.xbase-version}</version>
-						</dependency>
-					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.eclipse.xtend</groupId>
 					<artifactId>xtend-maven-plugin</artifactId>
-					<version>${xtend-maven-plugin-version}</version>
+					<version>${xtend-maven-plugin.version}</version>
 					<executions>
 						<execution>
 							<goals>
 								<goal>compile</goal>
-								<goal>xtend-install-debug-info</goal>
-								<goal>testCompile</goal>
-								<goal>xtend-test-install-debug-info</goal>
 							</goals>
 						</execution>
 					</executions>
 					<configuration>
-						<outputDirectory>${project.basedir}/xtend-gen</outputDirectory>
+						<!-- need to prefix by basedir to generate to currently built module -->
+						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
 					</configuration>
 					<dependencies>
+						<!-- these dependencies are contributed in Eclipse by the "Xtend Library" classpath container -->
 						<dependency>
 							<groupId>org.eclipse.xtend</groupId>
 							<artifactId>org.eclipse.xtend.lib</artifactId>
-							<version>${xtend-library-version}</version>
-							<type>pom</type>
-						</dependency>
-						<dependency>
-							<groupId>org.eclipse.emf</groupId>
-							<artifactId>org.eclipse.emf.ecore</artifactId>
-							<version>${org.eclipse.emf.ecore-version}</version>
+							<version>${xtend-library.version}</version>
 							<type>pom</type>
 						</dependency>
 					</dependencies>
@@ -585,25 +579,6 @@
 			</plugin>
 		</plugins>
 	</reporting>	
-
-	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<id>oss_snapshot</id>
-			<name>OSS SNAPSHOT</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-		</repository>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<id>central</id>
-			<name>Maven Repository Switchboard</name>
-			<url>http://repo1.maven.org/maven2/</url>
-		</repository>
-	</repositories>
 	
 	<pluginRepositories>
 		<pluginRepository>
@@ -617,16 +592,6 @@
 			</snapshots>
 		</pluginRepository>
 		<pluginRepository>
-			<id>sonatype_snapshot</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>		
-		<pluginRepository>
 			<id>fornax</id>
 			<url>http://www.fornax-platform.org/m2/repository</url>
 			<releases>
@@ -636,20 +601,8 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
-		<!--
-		<pluginRepository>
-			<id>cbi-jdt</id>
-			<url>${cbi-jdt-repo.url}</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-		-->		
-	</pluginRepositories>
-	
+	</pluginRepositories>	
+
 	<profiles>
 		<profile>
 			<id>remote-build-snapshot</id>
